--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "cfe60f3a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "id": "436ed224",
    "metadata": {},
    "outputs": [
@@ -25,20 +25,20 @@
        "  'last': {'@type': 'ton.blockIdExt',\n",
        "   'workchain': -1,\n",
        "   'shard': '-9223372036854775808',\n",
-       "   'seqno': 16041092,\n",
-       "   'root_hash': 'GihzIFQOLGWwq/4F2Bt7zFtbtWIHBoKrQkydT4VIZLY=',\n",
-       "   'file_hash': 'ptL9Vo9BzVFViIQszbYf5t/6hVm4IzcuGh7MF386OMY='},\n",
-       "  'state_root_hash': 'PIFvD7Co/BLJscuG0qQbj6TiIPh1A8NTKbGjSS5jmA8=',\n",
+       "   'seqno': 16077194,\n",
+       "   'root_hash': 'KsNyMN3dfL0xc4SzaGSImLZL+xF+0eeOYIbubKlq0tA=',\n",
+       "   'file_hash': 'alBIh3P9+uvNmISuHwyR/a74pUby3NTTAPgX/BiP9S0='},\n",
+       "  'state_root_hash': 'o4+MDd6jU58oHnIVJIDrP0i9zhqwcDo6gZC6wdcmyYU=',\n",
        "  'init': {'@type': 'ton.blockIdExt',\n",
        "   'workchain': -1,\n",
        "   'shard': '0',\n",
        "   'seqno': 0,\n",
        "   'root_hash': 'F6OpKZKqvqeFp6CQmFomXNMfMj2EnaUSOXN+Mh+wVWk=',\n",
        "   'file_hash': 'XplPz01CXAps5qeSWUtxcyBfdAo5zVb1N979KLSKD24='},\n",
-       "  '@extra': '1636763316.2004728:0.18063163974079133'}}"
+       "  '@extra': '1636891480.4644039:0.5952456749185325'}}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "id": "16ac77e9",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        "  'workchain_id': None}}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "id": "893e1b8d",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,64 @@
      "data": {
       "text/plain": [
        "{'ok': True,\n",
-       " 'result': [{'lt': 22948348000001,\n",
+       " 'result': [{'lt': 22958015000001,\n",
+       "   'timestamp': 1636794822,\n",
+       "   'hash': '+qNh541GdeLsol2gwTH0h9b+t7Ufk+q0/kG6keGZ5cc=',\n",
+       "   'fee': 6258005,\n",
+       "   'storage_fee': 5,\n",
+       "   'other_fee': 6258000,\n",
+       "   'received': {'from': 'external', 'nanoton': 0, 'message': ''},\n",
+       "   'sent': [{'to': 'EQCzFTXpNNsFu8IgJnRnkDyBCL2ry8KgZYiDi3Jt31ie8EIQ',\n",
+       "     'nanoton': 98000000000,\n",
+       "     'total_fee': '6258005',\n",
+       "     'storage_fee': '5',\n",
+       "     'other_fee': '6258000',\n",
+       "     'message': 'cae0c5b2-cba8-4aeb-b295-6263abddf096'}]},\n",
+       "  {'lt': 22957982000001,\n",
+       "   'timestamp': 1636794715,\n",
+       "   'hash': 'galiPgBQM54XvIlnlG6hCwVpbZWB2L4MmZt/Ek396Tw=',\n",
+       "   'fee': 6258256,\n",
+       "   'storage_fee': 256,\n",
+       "   'other_fee': 6258000,\n",
+       "   'received': {'from': 'external', 'nanoton': 0, 'message': ''},\n",
+       "   'sent': [{'to': 'EQCzFTXpNNsFu8IgJnRnkDyBCL2ry8KgZYiDi3Jt31ie8EIQ',\n",
+       "     'nanoton': 100000000000,\n",
+       "     'total_fee': '6258256',\n",
+       "     'storage_fee': '256',\n",
+       "     'other_fee': '6258000',\n",
+       "     'message': 'cae0c5b2-cba8-4aeb-b295-6263abddf096'}]},\n",
+       "  {'lt': 22956086000001,\n",
+       "   'timestamp': 1636788787,\n",
+       "   'hash': 'QtKQaoBGL4UWI5NmcyjMhmAxksE6SGDVMiY0wwW2mUs=',\n",
+       "   'fee': 4838007,\n",
+       "   'storage_fee': 7,\n",
+       "   'other_fee': 4838000,\n",
+       "   'received': {'from': 'external', 'nanoton': 0, 'message': ''},\n",
+       "   'sent': []},\n",
+       "  {'lt': 22956039000001,\n",
+       "   'timestamp': 1636788635,\n",
+       "   'hash': 'YxHs4C7LOlheAmGgaE85E34KqNUv4ZYLlpjMryocR14=',\n",
+       "   'fee': 7658209,\n",
+       "   'storage_fee': 209,\n",
+       "   'other_fee': 7658000,\n",
+       "   'received': {'from': 'external', 'nanoton': 0, 'message': ''},\n",
+       "   'sent': [{'to': 'EQCzFTXpNNsFu8IgJnRnkDyBCL2ry8KgZYiDi3Jt31ie8EIQ',\n",
+       "     'nanoton': 1000000000,\n",
+       "     'total_fee': '7658209',\n",
+       "     'storage_fee': '209',\n",
+       "     'other_fee': '7658000',\n",
+       "     'message': 'cae0c5b2-cba8-4aeb-b295-6263abddf096'}]},\n",
+       "  {'lt': 22948923000001,\n",
+       "   'timestamp': 1636766260,\n",
+       "   'hash': 'j520inJtE22QiHOSpRAOCRxvjsmuxqzAMVRHEaRsSDo=',\n",
+       "   'fee': 17,\n",
+       "   'storage_fee': 17,\n",
+       "   'other_fee': 0,\n",
+       "   'received': {'from': 'Ef8SYc83pm5JkGt0p3TQRkuiM58O9Cr3waUtR9OoFq716uj0',\n",
+       "    'nanoton': 100000000000,\n",
+       "    'message': ''},\n",
+       "   'sent': []},\n",
+       "  {'lt': 22948348000001,\n",
        "   'timestamp': 1636764445,\n",
        "   'hash': '5w4OJAG1QAHMrL6YFRcbXT2TgvXvwVC8Uar5gvYp8Ls=',\n",
        "   'fee': 0,\n",
@@ -114,7 +171,7 @@
        "  'hash': 'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA='}}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,85 +188,6 @@
     "\n",
     "get_transactions('EQCytgW3mPUuigJW8tNuru4uAAncpBEv3-ATWkodnxHRXXKC')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "id": "208cec97",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "175.343034264519"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5.2e+08 / 11565900 * 3.9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "7750593a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ok': False, 'error': 'Request timeout'}"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def get_address_information(address):\n",
-    "    url = 'https://toncenter.com/api/v2/getExtendedAddressInformation'\n",
-    "    params = {'address': address}\n",
-    "    resp = requests.get(url, params=params)\n",
-    "\n",
-    "    if resp.status_code != 200:\n",
-    "        raise RuntimeError(resp.status_code)\n",
-    "    return json.loads(resp.content)\n",
-    "\n",
-    "get_address_information('Ef_qw5GhWtBlRHAkrnTVXrXmH4t_zkj2ju9ZgbB-zEwJSnzh')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "ccdc219c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2021, 11, 13, 0, 35, 3)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from datetime import datetime\n",
-    "datetime.fromtimestamp(1636763703)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a71013b3",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
