--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 233,
    "id": "7dce4542",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,89 @@
    "metadata": {},
    "source": [
     "# TPS, validators, shards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "22bd9eed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(-1,8000000000000000,16110318):B312495457F1E34A04133051350A91474E0C370117D5AF6E67CB69AF70BC1E60:AF44CE2552D016EEC342DB83AA3EA80815DF4F6DEB7B194C44EC74E1481465AD'"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_block = ton.GetLastBlock()\n",
+    "last_block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "id": "9975d467",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': '1',\n",
+       "  'account': '3333333333333333333333333333333333333333333333333333333333333333',\n",
+       "  'lt': '23025745000001',\n",
+       "  'hash': 'B97BF57F4F4C8CC418D5AF1C6E3AD79A122D7814CA574285E262E290B110FF9F'},\n",
+       " {'id': '2',\n",
+       "  'account': '3333333333333333333333333333333333333333333333333333333333333333',\n",
+       "  'lt': '23025745000002',\n",
+       "  'hash': '991B7074F812BAF8ACC9F09661AFBE58B376239B303E2B1CF8954100279843FA'},\n",
+       " {'id': '3',\n",
+       "  'account': '34517C7BDF5187C55AF4F8B61FDC321588C7AB768DEE24B006DF29106458D7CF',\n",
+       "  'lt': '23025745000001',\n",
+       "  'hash': '802AC471ABA796C1294E6866B460462B2746E76694A227A9504BB21C2D61F501'},\n",
+       " {'id': '4',\n",
+       "  'account': '34517C7BDF5187C55AF4F8B61FDC321588C7AB768DEE24B006DF29106458D7CF',\n",
+       "  'lt': '23025745000003',\n",
+       "  'hash': 'E0258CF2E56887FA2739D5399F4746C2B2D57996515700476F7AF8E8CDACBDAB'},\n",
+       " {'id': '5',\n",
+       "  'account': '5555555555555555555555555555555555555555555555555555555555555555',\n",
+       "  'lt': '23025745000003',\n",
+       "  'hash': '575A67A4E3E15B57BA475F0CECB1F5B8CA505F89C539927010338FE56777770F'}]"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ton.GetTransactions('(-1,8000000000000000,16110296):6AF0B76A2FD2CF15F8FDF08E3BE927D38919DC89C76BB25AC4282EBA37AA7ADD:B5925025E14C70317D4FC41F3697A2C42A74FA93E18C971D41B4AD95EA4AF981')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "id": "796ba8dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(-1,8000000000000000,16110296):6AF0B76A2FD2CF15F8FDF08E3BE927D38919DC89C76BB25AC4282EBA37AA7ADD:B5925025E14C70317D4FC41F3697A2C42A74FA93E18C971D41B4AD95EA4AF981'"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ton.GetLastBlock()"
    ]
   },
   {
@@ -89,11 +172,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 186,
-   "id": "f3b7cbb5",
+   "cell_type": "raw",
+   "id": "7e6f3b3c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "import socket\n",
     "import struct\n",
@@ -111,55 +192,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 232,
-   "id": "03475a2c",
+   "cell_type": "raw",
+   "id": "bee5e1d4",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'addr': '178.18.243.125:15888', 'available': '?', 'response_time': None},\n",
-       " {'addr': '178.18.243.132:15888', 'available': '?', 'response_time': None},\n",
-       " {'addr': '178.18.243.136:15888', 'available': '?', 'response_time': None},\n",
-       " {'addr': '185.86.77.139:26907', 'available': '?', 'response_time': None},\n",
-       " {'addr': '92.255.207.93:29503', 'available': '?', 'response_time': None},\n",
-       " {'addr': '139.162.201.65:14395', 'available': '?', 'response_time': None},\n",
-       " {'addr': '172.104.59.125:14432', 'available': '?', 'response_time': None},\n",
-       " {'addr': '172.105.29.108:14583', 'available': '?', 'response_time': None},\n",
-       " {'addr': '65.21.7.173:15813', 'available': '?', 'response_time': None},\n",
-       " {'addr': '162.55.50.96:12821', 'available': '?', 'response_time': None},\n",
-       " {'addr': '23.88.40.211:15895', 'available': '?', 'response_time': None},\n",
-       " {'addr': '164.90.201.195:18513', 'available': '?', 'response_time': None},\n",
-       " {'addr': '161.35.49.42:11369', 'available': '?', 'response_time': None},\n",
-       " {'addr': '142.93.219.194:16937', 'available': '?', 'response_time': None},\n",
-       " {'addr': '128.199.231.154:7651', 'available': '?', 'response_time': None},\n",
-       " {'addr': '143.198.41.131:41623', 'available': '?', 'response_time': None},\n",
-       " {'addr': '167.172.138.57:22261', 'available': '?', 'response_time': None},\n",
-       " {'addr': '192.81.217.153:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '192.241.139.61:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '192.241.140.64:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '192.241.142.148:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '198.199.75.63:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '5.9.10.47:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '5.9.10.15:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '135.181.140.212:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '135.181.140.221:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '65.21.141.233:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '65.21.141.198:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '65.21.141.231:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '65.21.141.197:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '135.181.132.198:6302', 'available': '?', 'response_time': None},\n",
-       " {'addr': '135.181.132.253:6302', 'available': '?', 'response_time': None}]"
-      ]
-     },
-     "execution_count": 232,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# Считать список серверов\n",
     "filePath = ton.liteClient.configPath\n",
@@ -216,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 234,
    "id": "84ca9866",
    "metadata": {
     "scrolled": false
@@ -226,38 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "using liteserver 0 with addr [67.207.74.182:4924]\n",
-      "zerostate set to -1:17A3A92992AABEA785A7A090985A265CD31F323D849DA51239737E321FB05569:5E994FCF4D425C0A6CE6A792594B7173205F740A39CD56F537DEFD28B48A0F6E\n",
-      "latest masterchain block known to server is (-1,8000000000000000,16087396):6CC4D9B95E2F28950735773C81B8E9FEAD5A1B1C6595425EC4925A17EADAE81C:9E77FAD7A1DAB400485C4413F331F6B5EC446FF2C1C62EF713E215D5EFEDCD72 created at 1636927125 (7 seconds ago)\n",
-      "BLK#1 = (-1,8000000000000000,16087396):6CC4D9B95E2F28950735773C81B8E9FEAD5A1B1C6595425EC4925A17EADAE81C:9E77FAD7A1DAB400485C4413F331F6B5EC446FF2C1C62EF713E215D5EFEDCD72\n",
-      "BLK#2 = (-1,8000000000000000,0):17A3A92992AABEA785A7A090985A265CD31F323D849DA51239737E321FB05569:5E994FCF4D425C0A6CE6A792594B7173205F740A39CD56F537DEFD28B48A0F6E\n",
-      "shard configuration is (\n",
-      "  (hme_root\n",
-      "    root:(hm_edge\n",
-      "      label:(hml_same v:0 n:32)\n",
-      "      node:(hmn_leaf\n",
-      "        value:^(bt_leaf\n",
-      "          leaf:(shard_descr_new seq_no:20933481 reg_mc_seqno:16087396 start_lt:22999808000000 end_lt:22999808000001 root_hash:x74112B4C2F538A2DDBFDF5ED23106C972009E1E7F0B8BDD30A6AD5250842989B file_hash:x6447F364F2C5722E3F3D2FBC2D0F77ECE2D185A8790587D893212ABAB65F9CD9 before_split:0 before_merge:0 want_split:0 want_merge:1 nx_cc_updated:0 flags:0 next_catchain_seqno:246941 next_validator_shard:9223372036854775808 min_ref_mc_seqno:16087393 gen_utime:1636927119\n",
-      "            split_merge_at:fsm_none\n",
-      "            (\n",
-      "              fees_collected:(currencies\n",
-      "                grams:(nanograms\n",
-      "                  amount:(var_uint len:4 value:1000000000))\n",
-      "                other:(extra_currencies\n",
-      "                  dict:hme_empty))\n",
-      "              funds_created:(currencies\n",
-      "                grams:(nanograms\n",
-      "                  amount:(var_uint len:4 value:1000000000))\n",
-      "                other:(extra_currencies\n",
-      "                  dict:hme_empty)))))))))\n",
-      "x{C_}\n",
-      " x{D04_}\n",
-      "  x{5009FB5B4807ABCB200000A7587B1600000000A7587B16000BA0895A617A9C516EDFEFAF69188364B9004F0F3F85C5EE985356A9284214C4DB223F9B27962B9171F9E97DE1687BBF67168C2D43C82C3EC4990955D5B2FCE6C880001E24EC000000000000000007ABCB0B0C8C347A_}\n",
-      "   x{43B9ACA0021DCD65002_}\n",
-      "shard #1 : (0,8000000000000000,20933481):74112B4C2F538A2DDBFDF5ED23106C972009E1E7F0B8BDD30A6AD5250842989B:6447F364F2C5722E3F3D2FBC2D0F77ECE2D185A8790587D893212ABAB65F9CD9 @ 1636927119 lt 22999808000000 .. 22999808000001\n",
-      "BLK#3 = (0,8000000000000000,20933481):74112B4C2F538A2DDBFDF5ED23106C972009E1E7F0B8BDD30A6AD5250842989B:6447F364F2C5722E3F3D2FBC2D0F77ECE2D185A8790587D893212ABAB65F9CD9\n",
-      "\n",
-      "{'addr': '67.207.74.182:4924', 'working': True, 'response_time': 47.12250232696533, 'syncronized': 'unknown'}\n"
+      "{'addr': '67.207.74.182:4924', 'working': True, 'response_time': 47.36347198486328, 'syncronized': 'unknown'}\n"
      ]
     },
     {
@@ -266,7 +272,7 @@
        "[]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,8 +310,9 @@
     "    \n",
     "    # status\n",
     "    try:\n",
-    "        resp = ton.liteClient.Run(\"allshards\", index=index)\n",
-    "        print(resp)\n",
+    "        resp = ton.liteClient.Run(\"last\", index=index)\n",
+    "        if 'sync' in resp:\n",
+    "            print(resp)\n",
     "    except: pass\n",
     "    \n",
     "    loc = {\n",
@@ -345,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 242,
    "id": "9cab8b99",
    "metadata": {},
    "outputs": [],
@@ -353,10 +360,38 @@
     "services_list = [\n",
     "    {\n",
     "        'name': 'ton.sh',\n",
+    "        'api': 'https://api.ton.sh/getAddressInformation?address=EQCD39VS5jcptHL8vMjEXrzGaRcCVYto7HUn4bpAOg8xqB2N'\n",
+    "    },\n",
+    "    {\n",
+    "        'name': 'toncenter.com',\n",
     "        'api': 'https://toncenter.com/api/v2/getAddressInformation?address=0QCyt4ltzak71h6XkyK4ePfZCzJQDSVUNuvZ3VE7hP_Q-GTE'\n",
-    "\n",
-    "    }\n",
+    "    },\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "id": "c574b7f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "200 [None]\n",
+      "200\n",
+      "200 [None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for service in services_list:\n",
+    "    url = service['api']\n",
+    "    available = R.get(url).status_code\n",
+    "    resp_time = measure_latency(url)\n",
+    "    print(available, resp_time)"
    ]
   },
   {
@@ -628,6 +663,23 @@
     "headers = {'Cache-Control': 'no-store, max-age=0'}\n",
     "resp = R.get('https://ton.org/bridge/WTON.json', headers=headers)\n",
     "resp.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c8b20a8",
+   "metadata": {},
+   "source": [
+    "# Backup"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "851db1a7",
+   "metadata": {},
+   "source": [
+    "compliants = {'5886D080A7E674185049A64731C18AC206EC9805B0A4AA04978C372E7362E9FC1636931207': {'electionId': 1636931207, 'hash': 88903245105450268155828300227938303043764880885251014972808249943758051051572, 'pubkey': '5886D080A7E674185049A64731C18AC206EC9805B0A4AA04978C372E7362E9FC', 'adnl': 'CE24CAA1E86E1DA7914E0755D3E0D6B6BCB3A0228BBE73EAFD6C481ADA2020BF', 'description': 'C{1311944D9EBD5A90B0A529ACD07B95C727E7F62F19D1BB50A8D78384F2008DAF}', 'createdTime': 1636997292, 'severity': 2, 'rewardAddr': 'Ef9X6ObXojpUZza3NiS2TnRJ4KR7ler8cOjMRBt_swy4Qp2j', 'paid': 73042518866, 'suggestedFine': 101.0, 'suggestedFinePart': 0, 'votedValidators': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145], 'vsetId': 64678447710026207407772909170541134184282031556077784503273728435917568495010, 'weightRemaining': -306574679488018302, 'approvedPercent': 93.258, 'isPassed': True, 'pseudohash': '5886D080A7E674185049A64731C18AC206EC9805B0A4AA04978C372E7362E9FC1636931207'}, '968F4A6377F00F5FEEB618245741413EE4338D600CBC898A4D1BC460983E21D41636931207': {'electionId': 1636931207, 'hash': 64444557146890258920289842626623123286106217351764173254597531087899554543592, 'pubkey': '968F4A6377F00F5FEEB618245741413EE4338D600CBC898A4D1BC460983E21D4', 'adnl': '024F431A8A9C684D3D4051D12602434349B7FD92E06A76CA85ACAC098D9C4078', 'description': 'C{B9F9F210741EFA65523283F76273C2C2D0FB3B00A70259743E9F5128B3925E59}', 'createdTime': 1636997306, 'severity': 2, 'rewardAddr': 'Ef_COrB2c9Sm41aVhq54CotaTZJ55_3iDApuMkrBmGRiJ3RF', 'paid': 72760748424, 'suggestedFine': 101.0, 'suggestedFinePart': 0, 'votedValidators': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 76, 77, 78, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145], 'vsetId': 64678447710026207407772909170541134184282031556077784503273728435917568495010, 'weightRemaining': -298690205470328106, 'approvedPercent': 92.574, 'isPassed': True, 'pseudohash': '968F4A6377F00F5FEEB618245741413EE4338D600CBC898A4D1BC460983E21D41636931207'}}\n",
+    "print(compliants)"
    ]
   },
   {
