--- a/stats.ipynb
+++ b/stats.ipynb
@@ -27,6 +27,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc624f7f",
+   "metadata": {},
+   "source": [
+    "# reset database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "08f6542d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "governance\n",
+      "ton_bridges\n",
+      "ton_apis\n",
+      "liteservers\n",
+      "network_stats\n"
+     ]
+    }
+   ],
+   "source": [
+    "from backend.data.mongodb import get_database\n",
+    "db = get_database('ton_monitor_debug')\n",
+    "for collection in db.list_collection_names():\n",
+    "    db.drop_collection(collection)\n",
+    "    print(collection)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "621ee3ed",
    "metadata": {},
    "source": [
@@ -36,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "22bd9eed",
+   "id": "3e82e99c",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "9975d467",
+   "id": "d15418c8",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "796ba8dd",
+   "id": "99c5bfc8",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +207,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "7e6f3b3c",
+   "id": "e06329a0",
    "metadata": {},
    "source": [
     "import socket\n",
@@ -193,7 +227,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "bee5e1d4",
+   "id": "572d8058",
    "metadata": {
     "scrolled": false
    },
@@ -352,46 +386,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 263,
    "id": "9cab8b99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "services_list = [\n",
-    "    {\n",
-    "        'name': 'ton.sh',\n",
-    "        'api': 'https://api.ton.sh/getAddressInformation?address=EQCD39VS5jcptHL8vMjEXrzGaRcCVYto7HUn4bpAOg8xqB2N'\n",
-    "    },\n",
-    "    {\n",
-    "        'name': 'toncenter.com',\n",
-    "        'api': 'https://toncenter.com/api/v2/getAddressInformation?address=0QCyt4ltzak71h6XkyK4ePfZCzJQDSVUNuvZ3VE7hP_Q-GTE'\n",
-    "    },\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 244,
-   "id": "c574b7f9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "200 [None]\n",
-      "200\n",
-      "200 [None]\n"
+     "ename": "TypeError",
+     "evalue": "request() got an unexpected keyword argument 'timeouts'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_672152/3519296070.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mservice\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'api'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mserver\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'ip'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mavailable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mR\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeouts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m200\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mloc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'available'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mavailable\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mservices\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3/dist-packages/requests/api.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(url, params, **kwargs)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m     \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetdefault\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'allow_redirects'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'get'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/lib/python3/dist-packages/requests/api.py\u001b[0m in \u001b[0;36mrequest\u001b[0;34m(method, url, **kwargs)\u001b[0m\n\u001b[1;32m     58\u001b[0m     \u001b[0;31m# cases, and look like a memory leak in others.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0msessions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: request() got an unexpected keyword argument 'timeouts'"
      ]
     }
    ],
    "source": [
+    "services_list = [{'name': 'ton.sh',\n",
+    "                  'api': 'https://api.ton.sh/getAddressInformation?address=EQCD39VS5jcptHL8vMjEXrzGaRcCVYto7HUn4bpAOg8xqB2N',\n",
+    "                  'ip': 'https://ton.sh'},\n",
+    "                 {'name': 'toncenter.com',\n",
+    "                  'api': 'https://toncenter.com/api/v2/getAddressInformation?address=0QCyt4ltzak71h6XkyK4ePfZCzJQDSVUNuvZ3VE7hP_Q-GTE',\n",
+    "                  'ip': 'https://toncenter.com'}]\n",
+    "\n",
+    "services = []\n",
     "for service in services_list:\n",
+    "    name = service['name']\n",
     "    url = service['api']\n",
-    "    available = R.get(url).status_code\n",
-    "    resp_time = measure_latency(url)\n",
-    "    print(available, resp_time)"
+    "    ip = server['ip']\n",
+    "    available = R.get(url, timeout=2).status_code == 200\n",
+    "    loc = {'name': name, 'available': available}\n",
+    "    services.append(loc)\n",
+    "services"
    ]
   },
   {
@@ -667,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c8b20a8",
+   "id": "ce3c5eef",
    "metadata": {},
    "source": [
     "# Backup"
@@ -675,7 +704,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "851db1a7",
+   "id": "bfbf8f21",
    "metadata": {},
    "source": [
     "compliants = {'5886D080A7E674185049A64731C18AC206EC9805B0A4AA04978C372E7362E9FC1636931207': {'electionId': 1636931207, 'hash': 88903245105450268155828300227938303043764880885251014972808249943758051051572, 'pubkey': '5886D080A7E674185049A64731C18AC206EC9805B0A4AA04978C372E7362E9FC', 'adnl': 'CE24CAA1E86E1DA7914E0755D3E0D6B6BCB3A0228BBE73EAFD6C481ADA2020BF', 'description': 'C{1311944D9EBD5A90B0A529ACD07B95C727E7F62F19D1BB50A8D78384F2008DAF}', 'createdTime': 1636997292, 'severity': 2, 'rewardAddr': 'Ef9X6ObXojpUZza3NiS2TnRJ4KR7ler8cOjMRBt_swy4Qp2j', 'paid': 73042518866, 'suggestedFine': 101.0, 'suggestedFinePart': 0, 'votedValidators': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145], 'vsetId': 64678447710026207407772909170541134184282031556077784503273728435917568495010, 'weightRemaining': -306574679488018302, 'approvedPercent': 93.258, 'isPassed': True, 'pseudohash': '5886D080A7E674185049A64731C18AC206EC9805B0A4AA04978C372E7362E9FC1636931207'}, '968F4A6377F00F5FEEB618245741413EE4338D600CBC898A4D1BC460983E21D41636931207': {'electionId': 1636931207, 'hash': 64444557146890258920289842626623123286106217351764173254597531087899554543592, 'pubkey': '968F4A6377F00F5FEEB618245741413EE4338D600CBC898A4D1BC460983E21D4', 'adnl': '024F431A8A9C684D3D4051D12602434349B7FD92E06A76CA85ACAC098D9C4078', 'description': 'C{B9F9F210741EFA65523283F76273C2C2D0FB3B00A70259743E9F5128B3925E59}', 'createdTime': 1636997306, 'severity': 2, 'rewardAddr': 'Ef_COrB2c9Sm41aVhq54CotaTZJ55_3iDApuMkrBmGRiJ3RF', 'paid': 72760748424, 'suggestedFine': 101.0, 'suggestedFinePart': 0, 'votedValidators': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 51, 52, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 76, 77, 78, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145], 'vsetId': 64678447710026207407772909170541134184282031556077784503273728435917568495010, 'weightRemaining': -298690205470328106, 'approvedPercent': 92.574, 'isPassed': True, 'pseudohash': '968F4A6377F00F5FEEB618245741413EE4338D600CBC898A4D1BC460983E21D41636931207'}}\n",
